--- a/css/estilos.css
+++ b/css/estilos.css
@@ -17,7 +17,7 @@ a:hover{
 }
 
 #wrap{
-    width: 960px;
+    width: 1060px;
     margin: auto;
     clear: both;
     
@@ -51,8 +51,8 @@ header{
 }
 
 #logotipo a{
-    font-family:sourcesans;
-    font-size: 60px;
+    font-family:Satan;
+    font-size: 80px;
     color: #000066;
     
 }
@@ -73,14 +73,14 @@ header #subheader nav{
 
 header #subheader nav ul li{
     display: inline;/*elemtos mostrados en linea*/
-    font-family: sourcesans;
+    font-family: Satan;
      
     
 }
 
 header #subheader nav ul li a {
     color: #000066;
-    font-size:25px;
+    font-size:35px;
     padding: 10px;
     border-radius:2px;
     
@@ -90,4 +90,77 @@ header #subheader nav ul li a:hover{
     color:#006666;
     background: #FF99CC;
     text-decoration: none;
+}
+
+/*Main*/
+
+
+#main{
+    background: #808080;
+    width: 100%;
+    margin: 20px 0px 0px 0px;
+    float: left;
+}
+
+/*slideshow*/
+
+#slideshow{
+    width: 1020px;
+    height: 260px;
+    float: left;
+    background: #000;   
+    border: solid 20px white;
+    margin-bottom: 10px;
+    
+}
+
+
+#bienvenidos{
+    width: 1020px;
+    float: left;
+    padding: 20px;
+    
+        background: #0066CC; /* Old browsers */
+        background: -moz-linear-gradient(top, #46793a 0%, #2d4c1e 100%, #2d4c1e 100%, #207cca 100%); /* FF3.6-15 */
+        background: -webkit-linear-gradient(top, #46793a 0%,#2d4c1e 100%,#2d4c1e 100%,#207cca 100%); /* Chrome10-25,Safari5.1-6 */
+        background: linear-gradient(to bottom, #0066CC 0%,#0066CC 100%,#0066CC 100%,#0066CC 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#46793a', endColorstr='#207cca',GradientType=0 ); /* IE6-9 */
+    
+        margin: 20px 0px;
+        border-radius: 5px;
+        box-shadow: 0px 2px 2px #000;/*Sombra*/
+     
+}
+
+#bienvenidos article h1{
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    color:white;
+    font-size: 50px;
+    margin-bottom: 10px;
+    text-align: center;
+    }
+
+#bienvenidos article h2{
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    color:white;
+    font-size: 40px;
+    margin-bottom: 10px;
+    }
+    
+#bienvenidos article h3{
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    color:white;
+    font-size: 30px;
+    margin-bottom: 10px;
+    }
+
+#bienvenidos article {
+    color:white;
+    line-height: 27px;
+}
+
+#bienvenidos li {
+    color:white;
+    font-size: 20px;
+    line-height: 30px;
 }
