--- a/css/estilos.css
+++ b/css/estilos.css
@@ -3,7 +3,7 @@
 /*Los estilos generales*/
 
 body{
-    background: rgb(255, 204, 255);
+    background: #606060;
     font-family:fantasy, inherit, sans-serif;
         
 }
@@ -31,11 +31,11 @@ header{
     @font-face
     font-family: Satan;
     background: #00CCCC; /* Old browsers */
-    background: -moz-linear-gradient(top, #00CCCC 0%, #009999 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(top, #00CCCC 0%,#009999 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom, #00CCCC 0%,#009999 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00CCCC', endColorstr='#009999',GradientType=0 ); /* IE6-9 */
-        box-shadow: 0px 3px 5px #FF99FF;
+    background: -moz-linear-gradient(top, #00CCCC 0%, #009999  100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, #00CCCC 0%,#009999  6FF 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, #00CCCC 0%,#009999  100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00CCCC', endColorstr='#009999 ',GradientType=0 ); /* IE6-9 */
+        box-shadow: 0px 3px 5px #808080;
 }
 
 #subheader{
@@ -98,7 +98,7 @@ header #subheader nav ul li a:hover{
 
 
 #main{
-    background: #808080;
+    background: #9999FF;
     width: 100%;
     margin: 20px 0px 0px 0px;
     float: left;
@@ -118,19 +118,19 @@ header #subheader nav ul li a:hover{
 
 
 #bienvenidos{
-    width: 1160px;
+    width: 1156px;
     float: left;
     padding: 20px;
     
-        background: #0066CC; /* Old browsers */
-        background: -moz-linear-gradient(top, #0066CC 0%, #0066CC 100%, #0066CC 100%, #0066CC 100%); /* FF3.6-15 */
-        background: -webkit-linear-gradient(top, #0066CC 0%,#0066CC 100%,#0066CC 100%,#0066CC 100%); /* Chrome10-25,Safari5.1-6 */
-        background: linear-gradient(to bottom, #0066CC 0%,#0066CC 100%,#0066CC 100%,#0066CC 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0066CC', endColorstr='#0066CC',GradientType=0 ); /* IE6-9 */
+        background: #6666FF; /* Old browsers */
+        background: -moz-linear-gradient(top, #6666FF 0%, #6666FF 100%, #6666FF 100%, #6666FF 100%); /* FF3.6-15 */
+        background: -webkit-linear-gradient(top, #6666FF 0%,#6666FF 100%,#6666FF 100%,#6666FF 100%); /* Chrome10-25,Safari5.1-6 */
+        background: linear-gradient(to bottom, #6666FF 0%,#6666FF 100%,#6666FF 100%,#6666FF 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6666FF', endColorstr='#6666FF',GradientType=0 ); /* IE6-9 */
     
-        margin: 20px 0px;
+        margin: 2px 2px 2px 2px;
         border-radius: 5px;
-        box-shadow: 0px 2px 2px #003366;/*Sombra*/
+        box-shadow: 1px 1px 1px 1px #9999FF;/*Sombra*/
      
 }
 
@@ -163,7 +163,7 @@ header #subheader nav ul li a:hover{
 
 #bienvenidos li {
     color:white;
-    font-size: 25px;
+    font-size: 28px;
     line-height: 30px;
 }
 
