--- a/css/vic.css
+++ b/css/vic.css
@@ -20,7 +20,7 @@ header{
     background: -webkit-linear-gradient(top, #00CCCC 0%,#009999 100%); /* Chrome10-25,Safari5.1-6 */
     background: linear-gradient(to bottom, #00CCCC 0%,#009999 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00CCCC', endColorstr='#009999',GradientType=0 ); /* IE6-9 */
-        box-shadow: 0px 3px 5px #FF99FF;
+        box-shadow: 0px 3px 5px #808080;
 }
 
 #subheader{
