--- a/css/vic.css
+++ b/css/vic.css
@@ -115,6 +115,8 @@ header #subheader nav ul li a:hover{
 .tr{
     margin: 25px;
     padding: 20px;
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00CCCC', endColorstr='#009999 ',GradientType=0 ); /* IE6-9 */
+        box-shadow: 0px 3px 5px #808080;
 }
 
 .tabla{
