--- a/css/estiloschoi.css
+++ b/css/estiloschoi.css
@@ -15,8 +15,8 @@ a:hover{
     text-decoration: underline;
 }
 
-#wrap{
-    width: 1200px;
+#sec1{
+    width: 960px;
     margin: auto;
     clear: both;
     
@@ -94,5 +94,15 @@ header #subheader nav ul li a:hover{
 .ib{
     height: auto;
     background-image: url(cl.jpg);
-    background-size: cover;
+    background-size:contain;
+}
+
+#sec2{
+    width: 100%;
+    margin: 100px 0px 0px 0px;
+    float:left
+    
+}
+.colorsec2{
+    background-color: #576868;
 }
