--- a/css/estiloschoi.css
+++ b/css/estiloschoi.css
@@ -16,7 +16,7 @@ a:hover{
 }
 
 #sec1{
-    width: 960px;
+    width: 1000px;
     margin: auto;
     clear: both;
     
@@ -99,10 +99,32 @@ header #subheader nav ul li a:hover{
 
 #sec2{
     width: 100%;
-    margin: 100px 0px 0px 0px;
+    margin: 50px 0px 0px 0px;
     float:left
     
 }
-.colorsec2{
-    background-color: #576868;
+.sec3{
+    width: 100%;
+    float:left;
+    padding: 20px;
+    background-color: #b4d0c5;
+    border-radius: 10px;
+
+}
+.tamimg{
+    width: 300px;
+    height: 300px;
+    float: left;
+    margin: 0px 10px 0px 0px;
+}
+
+.titulos{
+    font-size: 40px;
+    text-align: center;
+
+}
+.contenidos{
+    font-size: 20px;
+    text-align: justify;
+
 }
