--- a/css/estiloschoi.css
+++ b/css/estiloschoi.css
@@ -16,7 +16,7 @@ a:hover{
 }
 
 #sec1{
-    width: 1000px;
+    width: 1100px;
     margin: auto;
     clear: both;
     
@@ -94,7 +94,7 @@ header #subheader nav ul li a:hover{
 .ib{
     height: auto;
     background-image: url(cl.jpg);
-    background-size:contain;
+    background-size: contain;
 }
 
 #sec2{
@@ -109,6 +109,7 @@ header #subheader nav ul li a:hover{
     padding: 20px;
     background-color: #b4d0c5;
     border-radius: 10px;
+    margin-bottom: 40px;
 
 }
 .tamimg{
@@ -117,14 +118,25 @@ header #subheader nav ul li a:hover{
     float: left;
     margin: 0px 10px 0px 0px;
 }
-
+.tamimg1{
+    width: 220px;
+    height: 500px;
+    float: left;
+    margin: 0px 10px 0px 0px;
+}
+.tamimg2{
+    width: 220px;
+    height: 500px;
+    float:right;
+    margin: 0px 0px 0px 10px;
+}
 .titulos{
     font-size: 40px;
     text-align: center;
 
 }
 .contenidos{
-    font-size: 20px;
+    font-size: 21px;
     text-align: justify;
 
 }
