--- a/css/estilos.css
+++ b/css/estilos.css
@@ -10,7 +10,10 @@ body{
 
 #wrap{
     width: 1200px;
-    margin: auto;
+    margin-top: 125px;
+    margin-left: 160px;
+    margin-right: 80px;
+    padding-bottom: 1000px;
     clear: both;
     
 }
@@ -237,6 +240,7 @@ header #subheader nav ul li a:hover{
         box-shadow: 0px 5px 5px 0px #808080;
 
     font-family:fantasy, inherit, sans-serif;
+    margin-top: 20px;
 }
 
 .letra{
