--- a/css/fuentes.css
+++ b/css/fuentes.css
@@ -8,3 +8,20 @@
     font-family: planetas;
     src: url(../fuentes/Planets.otf);
 }
+
+
+/* -------- Los estilos Ana -------- */
+@font-face {
+    font-family: Males;
+    src: url(../fuentes/Males.ttf);
+}
+
+@font-face {
+    font-family: Binjay;
+    src: url(../fuentes/Binjay.ttf);
+}
+
+@font-face {
+    font-family: Gihun;
+    src: url(../fuentes/Gihun.ttf);
+}
