--- a/css/estiloschoi.css
+++ b/css/estiloschoi.css
@@ -140,3 +140,49 @@ header #subheader nav ul li a:hover{
     text-align: justify;
 
 }
+.sec4{
+    width: 750px;
+    float: left;
+    margin: 0%;
+    padding: 0%;
+}
+
+aside{
+    width: 300px;
+    float:left;
+    margin-left: 20px;
+    background: #6a778a;
+    padding: 10px 10px 0px 10px;/* arriva-px  derecha-px abajo-px izquierda-px*/   
+    border-radius: 5px;/*borde poniendo radios*/
+    box-shadow: 0px 2px 2px #000; /* derecha-px abajo-px izquierda-px #color */
+    
+}
+
+aside .widget{ 
+    margin-bottom: 10px;
+    float: left;
+}
+
+aside .widget>h3{
+    background: white;
+    color: #4d78b3;
+    width: 300px;
+    padding: 10px 0px;
+    text-align: center;
+    font-weight: bold;
+    margin-bottom: 10px;  
+}
+
+aside .widget{
+    color: white;
+}
+
+.tamimg3{
+    width: 100%;
+    height: 400px;
+}
+.tamimg4{
+    width: 300px;
+    height: 208px;
+}
+
