--- a/css/estilos.css
+++ b/css/estilos.css
@@ -10,10 +10,10 @@ body{
 
 #wrap{
     width: 1200px;
-    margin-top: 125px;
-    margin-left: 160px;
-    margin-right: 80px;
-    padding-bottom: 1000px;
+    margin-top: auto;
+    margin-left: auto;
+    margin-right: auto;
+    padding-bottom: auto;
     clear: both;
     
 }
@@ -94,6 +94,55 @@ header #subheader nav ul li a:hover{
     color:#006666;
     background: #FF99CC;
     text-decoration: none;
+}
+/*Pie de pagina GENERAL*/
+
+.pie{
+    padding: auto;
+    width: 100%;
+    float: left;
+    @font-face
+    font-family: Satan;
+    background: #009999; /* Old browsers */
+    background: -moz-linear-gradient(top, #009999 0%, #006666  100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, #009999 0%,#006666  100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, #009999 0%,#006666  100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#009999', endColorstr='#006666 ',GradientType=0 ); /* IE6-9 */
+        box-shadow: 5px 5px 5px 5px #808080;
+
+    font-family:fantasy, inherit, sans-serif;
+    margin-top: 20px;
+}
+
+.letra{
+    font-size: 14px;
+    padding-left: auto;
+
+}
+
+#redes-s{  
+    float: left;
+    width: 300px;
+    padding: 10px 10px;
+    
+}
+
+#derechos{
+    float: right;
+    width: 900px;
+    padding: 50px;
+    
+}
+
+.h3{
+    font-size: 18x;  
+}
+
+#profe{
+    float: left;
+    width: auto;
+    padding: 10px;
+    
 }
 
 /*Fin de Seccion general----------------------------------------------------------------------*/
@@ -230,7 +279,7 @@ header #subheader nav ul li a:hover{
 
 /*Sidebar*/
 aside {
-    width: 305px;
+    width: 317px;
     float: left;
     margin-left: 20px;
     background: #4d78b3;
@@ -242,14 +291,14 @@ aside {
 
 aside .widget{
     
-    margin-bottom: 10px;
+    margin-bottom: 5px;
     float: left;
 }
 
 aside .widget>h3{
     background: pink;
     color: #4d78b3;
-    width: 307px;
+    width: 317px;
     padding: 10px 0px;
     text-align: center;
     font-weight: bold;
@@ -271,11 +320,11 @@ aside .widget ul li{
 
 aside .widget img{
     width: 100%;
-    height: 100%;
+    height: 10%;
 }
 
 .letra2{
-    font-size: 20px;
+    font-size: 19px;
 
 }
 
@@ -285,23 +334,48 @@ aside .widget img{
 /*Pie de pagina*/
 
 .pie{
-    padding: 10px 10px 10px 10px;
+    padding: auto;
     width: 100%;
     float: left;
     @font-face
     font-family: Satan;
     background: #009999; /* Old browsers */
     background: -moz-linear-gradient(top, #009999 0%, #006666  100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(top, #009999 0%,#006666  6FF 100%); /* Chrome10-25,Safari5.1-6 */
+    background: -webkit-linear-gradient(top, #009999 0%,#006666  100%); /* Chrome10-25,Safari5.1-6 */
     background: linear-gradient(to bottom, #009999 0%,#006666  100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#009999', endColorstr='#006666 ',GradientType=0 ); /* IE6-9 */
-        box-shadow: 0px 5px 5px 0px #808080;
+        box-shadow: 5px 5px 5px 5px #808080;
 
     font-family:fantasy, inherit, sans-serif;
     margin-top: 20px;
 }
 
 .letra{
-    font-size: 15px;
+    font-size: 14px;
+    padding-left: auto;
 
+}
+
+#redes-s{  
+    float: left;
+    width: 300px;
+    padding: 10px 10px;
+    
+}
+
+#derechos{
+    float: right;
+    width: 900px;
+    padding: 50px;
+    
+}
+#profe{
+    float: left;
+    width: auto;
+    padding: 10px;
+    
+}
+
+.h3{
+    font-size: 18x;  
 }
