--- a/css/vic.css
+++ b/css/vic.css
@@ -121,9 +121,58 @@ header #subheader nav ul li a:hover{
 
 .tabla{
     background: linear-gradient(to bottom, #f0db96 0%,#f7d205 100%);
-    margin-top: 30px;
-    margin-left: 40px;
-    margin-right: 40px;
-    margin-bottom: 30px;
+    margin-top: auto;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: auto;
 }
 
+/*Pie de pagina GENERAL*/
+
+.pie{
+    padding: auto;
+    width: 100%;
+    float: left;
+    @font-face
+    font-family: Satan;
+    background: #009999; /* Old browsers */
+    background: -moz-linear-gradient(top, #009999 0%, #006666  100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, #009999 0%,#006666  100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, #009999 0%,#006666  100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#009999', endColorstr='#006666 ',GradientType=0 ); /* IE6-9 */
+        box-shadow: 5px 5px 5px 5px #808080;
+
+    font-family:fantasy, inherit, sans-serif;
+    margin-top: 20px;
+}
+
+.letra{
+    font-size: 14px;
+    padding-left: auto;
+
+}
+
+#redes-s{  
+    float: left;
+    width: 300px;
+    padding: 10px 10px;
+    
+}
+
+#derechos{
+    float: right;
+    width: 900px;
+    padding: 50px;
+    
+}
+
+.h3{
+    font-size: 18x;  
+}
+
+#profe{
+    float: left;
+    width: auto;
+    padding: 10px;
+    
+}
