--- a/css/estiloschoi.css
+++ b/css/estiloschoi.css
@@ -93,7 +93,7 @@ header #subheader nav ul li a:hover{
 
 .ib{
     height: auto;
-    background-image: url(../media/Imag/cl.jpg);
+    background-image: url(../media/Imag/anise.jfif);
     background-size: contain;
 }
 
