--- a/css/estiloschoi.css
+++ b/css/estiloschoi.css
@@ -93,8 +93,9 @@ header #subheader nav ul li a:hover{
 
 .ib{
     height: auto;
-    background-image: url(../media/Imag/anise.jfif);
-    background-size: contain;
+    background-image: url(../media/Imag/cl.jpg);
+    background-size: 1100px;
+  
 }
 
 #sec2{
