--- a/css/fuentes.css
+++ b/css/fuentes.css
@@ -17,11 +17,11 @@
 }
 
 @font-face {
-    font-family: Binjay;
-    src: url(../fuentes/Binjay.ttf);
+    font-family: Gihun;
+    src: url(../fuentes/Gihun.ttf);
 }
 
 @font-face {
-    font-family: Gihun;
-    src: url(../fuentes/Gihun.ttf);
+    font-family: Simvoni;
+    src: url(../fuentes/Louis_George_Cafe_Italic.ttf);
 }
