--- a/css/kara.css
+++ b/css/kara.css
@@ -147,10 +147,7 @@ header #subheader nav ul li a:hover{
 
 h1{
     font-size: 18px;
-    color: aliceblue;
-   
-
-    
+    color: aliceblue;  
 }
 td{
     font-size: 16px;
@@ -167,18 +164,18 @@ td{
 }
 .tabla1{
     
-    background-color: #4f98c9;
+    background:linear-gradient(to top, #4f98c9 0%, rgb(25,78,125)100%);
     border-radius: 15px;
     align-content: center;
 }
 .tabla2{
     
-    background-color: #77323f;
+    background:linear-gradient(to top,rgb(255,20,50)0% ,#77323f 100% ) ;
     border-radius: 15px;
     align-content: center;
 }
 .tabla3{
-    background-color: #33a533;
+    background:linear-gradient(to bottom,#33a533 0%, rgb(192, 243, 104)) ;
     border-radius: 15px;
     align-content: center;
 
