--- a/css/estiloschoi.css
+++ b/css/estiloschoi.css
@@ -109,36 +109,45 @@ header #subheader nav ul li a:hover{
     float:left;
     padding: 20px;
     background-color: #b4d0c5;
-    border-radius: 10px;
+    border-radius: 25px;
     margin-bottom: 40px;
+    
+    
 
 }
 .tamimg{
     width: 300px;
-    height: 300px;
+    height: 322px;
     float: left;
     margin: 0px 10px 0px 0px;
+    border-radius: 25px;
 }
 .tamimg1{
     width: 220px;
-    height: 500px;
+    height: 490px;
     float: left;
     margin: 0px 10px 0px 0px;
+    border-radius: 25px;
 }
 .tamimg2{
     width: 220px;
-    height: 500px;
+    height: 490px;
     float:right;
     margin: 0px 0px 0px 10px;
+    border-radius: 25px;
 }
 .titulos{
     font-size: 40px;
     text-align: center;
+    font-family: Tomodachy;
+    color: #923484;
 
 }
 .contenidos{
-    font-size: 21px;
+    font-size: 20px;
     text-align: justify;
+    font-family: Tomodachy;
+    color: rgb(65, 65, 65);
 
 }
 .sec4{
@@ -154,7 +163,7 @@ aside{
     margin-left: 20px;
     background: #6a778a;
     padding: 10px 10px 0px 10px;/* arriva-px  derecha-px abajo-px izquierda-px*/   
-    border-radius: 5px;/*borde poniendo radios*/
+    border-radius: 25px;/*borde poniendo radios*/
     box-shadow: 0px 2px 2px #000; /* derecha-px abajo-px izquierda-px #color */
     
 }
@@ -171,7 +180,8 @@ aside .widget>h3{
     padding: 10px 0px;
     text-align: center;
     font-weight: bold;
-    margin-bottom: 10px;  
+    margin-bottom: 10px; 
+    border-radius: 25px; 
 }
 
 aside .widget{
@@ -180,11 +190,13 @@ aside .widget{
 
 .tamimg3{
     width: 100%;
-    height: 400px;
+    height: 426px;
+    border-radius: 25px;
 }
 .tamimg4{
     width: 300px;
     height: 208px;
+    border-radius: 25px;
 }
 
 .pie{
