retoques finales pagina

--- a/css/fuentes.css
+++ b/css/fuentes.css
@@ -34,3 +34,10 @@
     font-family: Tomodachy ;
     src: url(../fuentes/Tomodachy.otf);
 }
+
+/*--- Estilos ivan ---*/
+
+@font-face{
+    font-family: gooddog;
+    src: url(..//fuentes/GOODDC__.TTF);
+}
