--- a/css/kara.css
+++ b/css/kara.css
@@ -8,16 +8,6 @@ body{
         
 }
 
-#wrap{
-    width: 1200px;
-    margin-top: auto;
-    margin-left: auto;
-    margin-right: auto;
-    padding-bottom: auto;
-    clear: both;
-    
-}
-
 /* Seccion general -----------------------------------------------------------*/
 
 a{   text-decoration: none;
@@ -31,8 +21,6 @@ a:hover{
 header{
     width: 100%;
     float: left;
-    @font-face
-    font-family: Satan;
     background: #00CCCC; /* Old browsers */
     background: -moz-linear-gradient(top, #00CCCC 0%, #009999  100%); /* FF3.6-15 */
     background: -webkit-linear-gradient(top, #00CCCC 0%,#009999 100%); /* Chrome10-25,Safari5.1-6 */
@@ -56,7 +44,7 @@ header{
 }
 
 #logotipo a{
-    font-family:Satan;
+    font-family: patitas;
     font-size: 80px;
     color: #000066;
     
@@ -70,14 +58,14 @@ header{
 header #subheader nav{
     float: left;
     width: 660px;
-    padding: 30px 0px;
+    padding: 40px 0px;
     text-align: center;
     
 }
 
 header #subheader nav ul li{
     display: inline;/*elemtos mostrados en linea*/
-    font-family: Satan;
+    font-family: patitas;
      
     
 }
@@ -95,6 +83,7 @@ header #subheader nav ul li a:hover{
     background: #FF99CC;
     text-decoration: none;
 }
+
 /*Pie de pagina GENERAL*/
 
 .pie{
@@ -102,22 +91,20 @@ header #subheader nav ul li a:hover{
     width: 100%;
     float: left;
     @font-face
-    font-family: Satan;
+    font-family: cursiva;
     background: #009999; /* Old browsers */
     background: -moz-linear-gradient(top, #009999 0%, #006666  100%); /* FF3.6-15 */
     background: -webkit-linear-gradient(top, #009999 0%,#006666  100%); /* Chrome10-25,Safari5.1-6 */
     background: linear-gradient(to bottom, #009999 0%,#006666  100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#009999', endColorstr='#006666 ',GradientType=0 ); /* IE6-9 */
         box-shadow: 5px 5px 5px 5px #808080;
-
-    font-family:fantasy, inherit, sans-serif;
     margin-top: 20px;
 }
 
 .letra{
-    font-size: 14px;
+    font-size: 15px;
     padding-left: auto;
-
+    font-family: Bodo;
 }
 
 #redes-s{  
@@ -144,6 +131,9 @@ header #subheader nav ul li a:hover{
     padding: 10px;
     
 }
+
+/*Fin de Seccion general----------------------------------------------------------------------*/
+
 
 .tit{
     font-size: 50px;
