--- a/css/Ana.css
+++ b/css/Ana.css
@@ -1,7 +1,8 @@
 @import url('reset.css');
 @import url('fuentes.css');
 /* -------- Los estilos generales -------- */
-/*Header*/
+/* Seccion general -----------------------------------------------------------*/
+
 a{   text-decoration: none;
     color:black;
 }
@@ -13,18 +14,16 @@ a:hover{
 header{
     width: 100%;
     float: left;
-    @font-face
-    font-family: Satan;
     background: #00CCCC; /* Old browsers */
-    background: -moz-linear-gradient(top, #00CCCC 0%, #009999 100%); /* FF3.6-15 */
+    background: -moz-linear-gradient(top, #00CCCC 0%, #009999  100%); /* FF3.6-15 */
     background: -webkit-linear-gradient(top, #00CCCC 0%,#009999 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom, #00CCCC 0%,#009999 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00CCCC', endColorstr='#009999',GradientType=0 ); /* IE6-9 */
+    background: linear-gradient(to bottom, #00CCCC 0%,#009999  100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00CCCC', endColorstr='#009999 ',GradientType=0 ); /* IE6-9 */
         box-shadow: 0px 3px 5px #808080;
 }
 
 #subheader{
-    width: 1000px;
+    width: 960px;
     margin: auto;
     
 }
@@ -32,13 +31,13 @@ header{
 #logotipo{
     
     float: left;
-    width: 330px;
+    width: 300px;
     padding: 10px 0px;
     
 }
 
 #logotipo a{
-    font-family:Satan;
+    font-family: patitas;
     font-size: 80px;
     color: #000066;
     
@@ -46,17 +45,20 @@ header{
 
 #logotipo a:hover{text-decoration: none;}
 
+
+/*--Menu--*/
+
 header #subheader nav{
     float: left;
     width: 660px;
-    padding: 30px 0px;
+    padding: 40px 0px;
     text-align: center;
     
 }
 
 header #subheader nav ul li{
-    display: inline;
-    font-family: Satan;
+    display: inline;/*elemtos mostrados en linea*/
+    font-family: patitas;
      
     
 }
@@ -74,6 +76,56 @@ header #subheader nav ul li a:hover{
     background: #FF99CC;
     text-decoration: none;
 }
+
+/*Pie de pagina GENERAL*/
+
+.pie{
+    padding: auto;
+    width: 100%;
+    float: left;
+    @font-face
+    font-family: cursiva;
+    background: #009999; /* Old browsers */
+    background: -moz-linear-gradient(top, #009999 0%, #006666  100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, #009999 0%,#006666  100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, #009999 0%,#006666  100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#009999', endColorstr='#006666 ',GradientType=0 ); /* IE6-9 */
+        box-shadow: 5px 5px 5px 5px #808080;
+    margin-top: 20px;
+}
+
+.letra{
+    font-size: 15px;
+    padding-left: auto;
+    font-family: Bodo;
+}
+
+#redes-s{  
+    float: left;
+    width: 300px;
+    padding: 10px 10px;
+    
+}
+
+#derechos{
+    float: right;
+    width: 900px;
+    padding: 50px;
+    
+}
+
+.h3{
+    font-size: 18x;  
+}
+
+#profe{
+    float: left;
+    width: auto;
+    padding: 10px;
+    
+}
+
+/*Fin de Seccion general----------------------------------------------------------------------*/
 
 #sec1{
     width: 1100px;
@@ -137,53 +189,4 @@ body{
     float: right;/*elementos a la izquierda*/
     margin: 10px 10px 10px 10px;
     border-radius: 20px;
-}
-
-/* -------- Los estilos Pie de pagina General -------- */
-.pie{
-    padding: auto;
-    width: 100%;
-    float: left;
-    @font-face
-    font-family: Satan;
-    background: #009999; /* Old browsers */
-    background: -moz-linear-gradient(top, #009999 0%, #006666  100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(top, #009999 0%,#006666  100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom, #009999 0%,#006666  100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#009999', endColorstr='#006666 ',GradientType=0 ); /* IE6-9 */
-        box-shadow: 5px 5px 5px 5px #808080;
-
-    font-family:fantasy, inherit, sans-serif;
-    margin-top: 20px;
-}
-
-.letra{
-    font-size: 14px;
-    padding-left: auto;
-
-}
-
-#redes-s{  
-    float: left;
-    width: 300px;
-    padding: 10px 10px;
-    
-}
-
-#derechos{
-    float: right;
-    width: 900px;
-    padding: 50px;
-    
-}
-
-.h3{
-    font-size: 18x;  
-}
-
-#profe{
-    float: left;
-    width: auto;
-    padding: 10px;
-    
 }
