--- a/css/estiloschoi.css
+++ b/css/estiloschoi.css
@@ -143,8 +143,8 @@ header #subheader nav ul li a:hover{
 
 .ib{
     height: auto;
-    background-image: url(../media/Imag/cl.jpg);
-    background-size: 1100px;
+    background-image: url(../media/Imag/laskdaxd.jfif);
+    background-size: 600px;
   
 }
 
